2020-06-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/wpg.c (UnpackWPGRaster): Fix oss-fuzz 23042
	"Heap-buffer-overflow in ImportGrayQuantumType" and oss-fuzz
	"Heap-buffer-overflow in InsertRow" which are both from the same
	cause.

2020-06-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/pixel_cache.c (ClipCacheNexus): Change x and y variables
	to unsigned type.

2020-05-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WriteTIFFImage): WebP compression only supports a
	depth of 8.  Fixes oss-fuzz 22560 "Use-of-uninitialized-value in
	GammaToLinear".

2020-05-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/wpg.c (ReadWPGImage): Terminate reading when a pixel
	cache resource limit is hit rather than moving on to heap buffer
	overflow.  Fixes oss-fuzz 20045, 20318, 21956

	* coders/png.c (ReadMNGImage): If the image width is 1, then X
	magnification is done by by simple pixel replication.  If the
	image height is 1, then Y magnification is done by simple pixel
	replication.  Fixes oss-fuzz issue 19025 "Heap-buffer-overflow in
	ReadMNGImage" and oss-fuzz issue 19026 "ASSERT: yy < (long)
	large_image->rows". It appears that CERT has assigned
	CVE-2020-12672 for oss-fuzz issue 19025.  Note that the heap
	overwrite is only one byte.

2020-05-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Update with changes up to 2020-04-23.

2020-04-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dpx.c (ReadDPXImage): Support dpx:swap-samples-read
	define which behaves similar to dpx:swap-samples, but is only
	applied when reading.  This provides for use when there is both
	reading and writing in the same operation.
	(WriteDPXImage): Support dpx:swap-samples-write define which
	behaves similar to dpx:swap-samples, but is only applied when
	writing.  This provides for use when there is both reading and
	writing in the same operation.
