@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020200606"
-#define public MagickPackageReleaseDate "snapshot-20200606"
+#define public MagickPackageVersionAddendum ".020200613"
+#define public MagickPackageReleaseDate "snapshot-20200613"
